# worldnews-bot

./: .replit  pyproject.toml  replit.md
bot/: bot.py  feeds.py  fetcher.py  main.py  requirements.txt  storage.py
bot/data/: post_log.json  posted_hashes.json
