[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser==6.0.11",
    "flask>=3.1.3",
    "google-generativeai>=0.8.6",
    "python-telegram-bot[job-queue]==21.11.1",
    "pytz>=2026.2",
    "requests>=2.33.1",
]
